<resources>
    <string name="app_name">Unit Converter</string>
    <string name="convertedValue">0</string>
    <string name="unitValueHint">0</string>
    <string name="toLabel">To</string>
    <string name="convert_button_label">CONVERT</string>
    <string-array name="units_array">
        <item>Pounds</item>
        <item>Kilograms</item>
        <item>Grams</item>
        <item>Ounces</item>
    </string-array>
</resources>