<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08082E"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#61C66B"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/convertedValue"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLabel" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="415dp"
        android:layout_height="170dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLabel">

        <EditText
            android:id="@+id/convert_value"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#2196F3"
            android:ems="10"
            android:gravity="center"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/unitValueHint"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/table_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_rounded_edges">

            <TableRow
                android:id="@+id/table_row_1"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center">

                <Spinner
                    android:id="@+id/unitSpinnerOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="true"
                    android:entries="@array/units_array"
                    android:gravity="center_horizontal"
                    android:paddingStart="0sp"
                    android:paddingLeft="0sp"
                    android:paddingTop="0sp"
                    android:paddingEnd="-10sp"
                    android:paddingRight="-10sp"
                    android:paddingBottom="0sp"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8E278C"
                android:gravity="center">

                <TextView
                    android:id="@+id/toLabel"
                    android:layout_width="176dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/toLabel"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/table_row_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hapticFeedbackEnabled="true">

                <Spinner
                    android:id="@+id/unitSpinnerTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/units_array"
                    android:gravity="center_horizontal"
                    android:padding="0sp"
                    android:paddingStart="0sp"
                    android:paddingLeft="0sp"
                    android:paddingTop="0sp"
                    android:paddingEnd="-10sp"
                    android:paddingRight="-10sp"
                    android:paddingBottom="0sp"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="convert"
        android:rotationX="22"
        android:text="@string/convert_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>